# fractal-pv-dashboard

./: .gitignore  LICENSE  README.md  Yahoo finance  app.py  calculate hurst parameter - 1  calculate hurst parameter - 2  linear fit  pyproject.toml  requirements.txt
legacy/: README.md
src/fractal_pv/: __init__.py  bootstrap.py  data.py  hurst.py  inference.py  inference_robust.py  predict.py  regimes.py  rolling.py  stationarity.py  validate.py
