[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fractal-pv"
version = "0.1.0"
description = "Fractal analysis of stock price-volume correlation via Hurst exponents and multifractal DFA"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Dinesh Hari", email = "mhdk1602@gmail.com" },
]
keywords = ["hurst-exponent", "fractal-analysis", "mfdfa", "price-volume", "econophysics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial :: Investment",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "statsmodels>=0.14",
    "nolds>=0.6",
    "MFDFA>=0.4",
    "hurst>=0.0.5",
    "yfinance>=0.2.37",
    "tqdm>=4.65",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.3",
    "pre-commit>=3.0",
    "jupyter>=1.0",
    "nbstripout>=0.7",
]
wavelets = ["PyWavelets>=1.5"]
test = ["fbm>=0.3"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
